##########################
# Setup.py Configuration #
##########################
[metadata]
name = bel2scm
version = 0.0.1
description = A package for creating causal graphs in pyro
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/COVID-19-Causal-Reasoning/bel2scm
download_url = https://github.com/COVID-19-Causal-Reasoning/bel2scm/releases
project_urls =
    Bug Tracker = https://github.com/COVID-19-Causal-Reasoning/bel2scm/issues
    Source Code = https://github.com/COVID-19-Causal-Reasoning/bel2scm

# Author information
author = BEL2SCM Developers
author_email = craig.bakker@pnnl.gov

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    biology
    structural causal models
    biological expression language
    BEL
    systems biology
    networks biology

[options]
install_requires =
    numpy
    torch
    pyro-ppl>=1.3.1
    networkx
    scipy
    pybel
    xlrd
    matplotlib
    sklearn
    openpyxl


# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120
